	+ Allow DND of music from a file manager into playlist (requires mpd 0.14)
	+ Preserve column percentages for current tab across window resizing
	+ Speed up mpd-related commandline arguments
	+ Switch back to last tab on second cover art click
	+ Retain selection in lists after removing items
	+ Hidden config option to expand notebook tabs (tabs_expanded)
	+ Add Estonian translation (Mihkel)
	+ Bug: Fix artwork for artists/albums with "/" in them (e.g. AC/DC)
	+ Bug: Fix egg trayicon with vertical system tray
	+ Bug: Weird bug in library-view
	+ Bug: Prevent failure to load if tab positions are saved as None
	+ Bug: Fix non-ascii characters in files for non-utf8 filesystems (zap)
	+ Bug: Prevent crash with certain locales like turkish (jat)
	+ Bug: Using filter causes playlist to jump to the top
	+ Bug: Fix AudioScrobblerQuery (kigurai)

v1.4.2 - February 9, 2008
	+ Add %D for disc tag in display formatting options
	+ Better handling if no read permission (e.g. no/bad mpd password supplied)
	+ Bug: Fix seeking in progress bar
	+ Bug: Fix blank album info when there is an ampersand
	+ Bug: Missing color in notification window
	+ Bug: Notebook arrow clicks are ignored due to gtk bug
	+ Bug: Potential ordering bug when sorting via column heading click
	+ Bug: Make desktop file compliant
	+ Bug: Column widths can collapse when exiting while minimized to the tray

v1.4.1 - February 2, 2008
	+ Remove queue support (it was removed from mpd-svn, complain to them)
	+ Improved re-ordering of playlist songs (including multiple selected songs)
	+ Add album info into info tab
	+ Use hand2 instead of hand1 for song info links
	+ Bug: Traceback can occur after enabling audioscrobbler
	+ Bug: Text background color on tabs (ecik)
	+ Bug: Visible background of eventboxes for info tab links, etc.
	+ Bug: Can't click (more) link in non-English locales
	+ Bug: Crash when using libegg with system tray icon disabled
	+ Bug: Disable tag editing link in info tab for streams/remote files